deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapi-smtp-dev-runtime-damm
spec:
  selector:
    matchLabels:
      app: sapi-smtp-dev-runtime-damm
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: sapi-smtp-dev-runtime-damm
    spec:
      containers:
      - name: sapi-smtp-dev-runtime-damm
        image: 
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu:  1000m
            memory: 2048Mi
          requests:
            cpu:  500m
            memory: 2048Mi
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
            
---

apiVersion: v1
kind: Service
metadata:
  name: sapi-smtp-dev-runtime-damm-service
spec:
  selector:
    app: sapi-smtp-dev-runtime-damm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
