ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapi-smtp-int-runtime-damm-ingress
  namespace: mulesoft
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-599"
    
spec:
  tls:
  - hosts:
    - pre-msapi.damm.com
    secretName: damm-com-ingress-tls
  rules:
  - host: pre-msapi.damm.com
    http:
      paths:
      - path: /smtp/api/v1/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sapi-smtp-int-runtime-damm-service
            port:
                number: 80
